[package]
name = "blazing-css-cli"
version = "0.1.10"
edition = "2024"

[dependencies]
anyhow = "1.0"
blazing-css = { path = "../blazing-css" }
cargo_metadata = "0.18"
clap = { version = "4.5", features = ["derive"] }
notify = { version = "5.1", default-features = true }
owo-colors = "4.1"

[dev-dependencies]
tempfile = "3.10"

[lib]
name = "blazing_css_cli"
path = "src/lib.rs"

[[bin]]
name = "bzc"
path = "src/main.rs"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"